--- a/appmanifest.json
+++ b/appmanifest.json
@@ -4,6 +4,7 @@
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
+	"_credits": "Bad Time Simulator originally by bootheidiot", 
 	"icons": [{
 		"src": "icon-16.png",
 		"sizes": "16x16",
@@ -26,3 +27,4 @@
 		"type": "image/png"
 	}]
 }
+
